--- a/style.css
+++ b/style.css
@@ -1,28 +1,42 @@
-
 /*======GERAL===========*/
 * {
   margin: 0;
+  padding: 0;
   box-sizing: border-box;
 }
 
 :root {
-  --primary-color: hsl(170, 100%, 26%);
+  --hue: 170;
+  --primary-color: hsl(var(--hue), 100%, 26%);
   --headline: hsl(210, 11%, 15%);
   --paragraph: hsl(210, 9%, 31%);
 
   --brand-beige: hsl(39, 100%, 97%);
-  --brand-light: hsl(148, 23%, 89%);
-  
+  --brand-light: hsl(calc(var(--hue) - 22), 23%, 89%);
+  --bg-ligth: hsl(180, 14%, 97%);
+  --brand-dark: hsl(170, 100%, 14%);
+
   font-size: 62.5%;
 
   --nav-height: 7.2rem;
+}
 
+html {
+  scroll-behavior: smooth;
+}
+
+html,
+body {
+  width: 100%;
+  height: 100%;
 }
 
 body {
-  font-family: "DM sans";
+  font-family: 'DM sans';
   font-size: 1.6rem;
   text-align: center;
+  overflow: overlay;
+  background-color: var(--bg-ligth);
 }
 
 .wrapper {
@@ -31,51 +45,56 @@ body {
   padding-inline: 2.4rem;
 }
 
-/*======HEADER===========*/
-
-header {
-  
-  margin-top: calc(4.1rem + var(--nav-height));
-
+ul {
+  list-style: none;
 }
 
-header::before {
-    content: '';
-    width: 100vw;
-    height: calc(108rem + var(--nav-height));
-    background-color: var(--brand-light);
-    display: block;
-  
-    position: absolute;
-    top: 0;
-    left: 0;
-    z-index: -1;
-  }
+img {
+  max-width: 100%;
+}
 
-header h4 {
+section {
+  padding-block: 10rem;
+}
+
+section header h4 {
   font-size: 1.4rem;
+  font-weight: 700;
+  line-height: 150%;
+  letter-spacing: 0.08rem;
   color: var(--primary-color);
+  text-transform: uppercase;
   margin-bottom: 1.6rem;
 }
-header h1 {
+
+section header h2 {
+  font-size: 3rem;
+  line-height: 3.9rem;
+  color: var(--headline);
+}
+
+section header h1 {
   font-size: 3.4rem;
   color: var(--headline);
   line-height: 130%;
   margin-bottom: 2.4rem;
 }
-header p {
-  font-size: 1.8rem;
+
+section .content p {
+  font-weight: 400;
+  font-size: 1.6rem;
   line-height: 150%;
+
   color: var(--paragraph);
-  margin-bottom: 3.2rem;
 }
-header button {
+
+.button {
   border-radius: 4rem;
   background-color: var(--primary-color);
   margin-bottom: 6rem;
 
-  height: 6.2rem;
-  width: 26.3rem;
+  padding: 1.6rem 3.2rem;
+  width: fit-content;
 
   color: #ffff;
   text-transform: uppercase;
@@ -87,19 +106,209 @@ header button {
   justify-content: center;
   gap: 1.6rem;
 
-  margin-right: auto;
-  margin-left: auto;
+  text-decoration: none;
 }
 
-header img {
-    width: 26.4rem;
-    display: block;
-    margin-inline: auto;
-    object-position: 0 2rem;
-  }
-  
+.button:hover {
+  background-color: var(--brand-dark);
+  transition: background 0.2s;
+}
 
-.stats {
+.social-links {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 3.2rem;
+}
+
+/*CUSTOM COLOR */
+#services .card circle {
+  fill: var(--brand-light);
+}
+#navigation .logo path[fill*="#00856F"],
+#backToTopButton circle {
+  fill: var(--primary-color);
+}
+button.open-menu path[stroke*="00856F"],
+#contact li path {
+  stroke: var(--primary-color);
+}
+body.menu-expanded #navigation .logo path,
+#navigation.scroll .logo path {
+  fill: white;
+}
+#navigation.scroll button.open-menu path[stroke*="00856F"] {
+  stroke: white;
+}
+
+/*======NAVIGATION===========*/
+
+nav {
+  display: flex;
+
+  height: var(--nav-height);
+
+  position: fixed;
+  top: 0;
+  width: 100vw;
+
+  z-index: 100;
+}
+
+nav .wrapper {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
+nav.scroll {
+  background: var(--primary-color);
+}
+
+nav button {
+  background: none;
+  border: none;
+  cursor: pointer;
+}
+
+/*======MENU-EXPANDED===========*/
+body.menu-expanded {
+  overflow: hidden;
+}
+
+body.menu-expanded > :not(nav) {
+  visibility: hidden;
+}
+
+.menu,
+.close-menu,
+body.menu-expanded .open-menu {
+  opacity: 0;
+  visibility: hidden;
+}
+
+body.menu-expanded .menu,
+body.menu-expanded .close-menu {
+  opacity: 1;
+  visibility: visible;
+}
+
+.menu {
+  transform: translateY(100%);
+}
+
+body.menu-expanded .menu {
+  position: fixed;
+  top: 0;
+  left: 0;
+  background: var(--primary-color);
+  width: 100vw;
+  height: 100vh;
+
+  padding-top: var(--nav-height);
+
+  transition: transform 300ms;
+  transform: translateY(0);
+}
+
+.menu ul:nth-child(1) {
+  display: flex;
+  flex-direction: column;
+  gap: 4.8rem;
+
+  margin-top: 6rem;
+  font-weight: 700;
+  font-size: 2.4rem;
+  line-height: 3.1rem;
+}
+.menu ul li a {
+  color: #ffffff;
+  text-decoration: none;
+}
+
+.menu .button {
+  background: #ffffff;
+  border-radius: 4rem;
+  font-weight: 700;
+  font-size: 1.8rem;
+  line-height: 2.3rem;
+  text-transform: uppercase;
+  text-decoration: none;
+
+  color: var(--primary-color);
+  display: inline-block;
+  padding: 16px 32px;
+  margin-top: 4.8rem;
+  margin-bottom: 8rem;
+}
+
+.menu .button:hover {
+  background-color: var(--primary-color);
+  color: white;
+  filter: brightness(1.3);
+}
+
+body.menu-expanded .logo,
+body.menu-expanded button {
+  position: relative;
+  z-index: 100;
+}
+
+body.menu-expanded .logo path {
+  fill: white;
+}
+body.menu-expanded button path {
+  stroke: white;
+}
+
+/*======HEADER===========*/
+
+#home {
+  padding-top: calc(4.1rem + var(--nav-height));
+}
+
+#home::before {
+  content: '';
+  width: 100%;
+  height: calc(108rem + var(--nav-height));
+  background-color: var(--brand-light);
+  display: block;
+
+  position: absolute;
+  top: 0;
+  left: 0;
+  z-index: -1;
+}
+#home .button {
+  margin-inline: auto;
+}
+
+#home h4 {
+  font-size: 1.4rem;
+  color: var(--primary-color);
+  margin-bottom: 1.6rem;
+}
+#homer h1 {
+  font-size: 3.4rem;
+  color: var(--headline);
+  line-height: 130%;
+  margin-bottom: 2.4rem;
+}
+#home p {
+  font-size: 1.8rem;
+  line-height: 150%;
+  color: var(--paragraph);
+  margin-bottom: 3.2rem;
+}
+
+#home img {
+  width: 26.4rem;
+  display: block;
+  margin-inline: auto;
+  object-position: 0 2rem;
+}
+
+#home .stats {
   width: 32.7rem;
   padding-block: 4rem;
   margin-inline: auto;
@@ -114,54 +323,132 @@ header img {
   gap: 6rem;
 }
 
-.stat h3 {
+#home .stat h3 {
   font-size: 4.8rem;
   color: var(--headline);
   line-height: 130%;
   margin-bottom: 0.4rem;
 }
 
-.stat p {
+#home .stat p {
   margin: 0;
   color: var(--primary-color);
   font-size: 1.6rem;
   line-height: 150%;
 }
 
-/*======NAVIGATION===========*/
-
-nav {
-    display: flex;
-    
-    height: var(--nav-height);
-
-    position: fixed;
-    top: 0;
-    left: 50%;
-    transform: translateX(-50%);
-
-    
+/*======SERVICES===========*/
+#services header h2 {
+  margin-bottom: 6rem;
 }
 
-nav .wrapper {
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-
-
-
+#services .cards {
+  display: flex;
+  flex-direction: column;
+  gap: 3.2rem;
 }
 
-nav.scroll {
-    background: var(--primary-color);
-    width: 100vw;
+#services .card {
+  padding: 2.4rem;
+  text-align: left;
 
-} 
+  background: white;
 
-nav.scroll svg:nth-child(1) path {
-    fill: white
-
+  border: 1px solid var(--brand-light);
+  border-radius: 0.6rem;
 }
-nav.scroll svg:nth-child(2) path {
-    stroke: white ;
+
+#services .card h3 {
+  margin-block: 1.6rem;
+}
+
+
+/*======ABOUT===========*/
+#about {
+  text-align: left;
+  background-color: var(--brand-beige);
+}
+
+#about header h2 {
+  margin-bottom: 2.4rem;
+}
+
+#about .content p {
+  margin-top: 2.4rem;
+  margin-bottom: 6rem;
+}
+
+/*======CONTACT===========*/
+#contact {
+  text-align: left;
+}
+
+#contact header {
+  margin-bottom: 3.2rem;
+}
+
+#contact ul {
+  display: flex;
+  flex-direction: column;
+  gap: 1.6rem;
+  margin-bottom: 3.2rem;
+}
+
+#contact ul li {
+  display: flex;
+  align-items: center;
+  gap: 0.8rem;
+}
+
+/*======FOOTER===========*/
+
+footer {
+  background-color: var(--primary-color);
+  padding-block: 6rem;
+  text-align: left;
+  color: white;
+}
+
+footer .logo {
+  display: inline-block;
+  margin-bottom: 2.4rem;
+}
+
+footer .logo svg {
+  width: 23.6rem;
+  height: 3.1rem;
+}
+
+footer .logo path {
+  fill: white;
+}
+
+footer p {
+  color: var(--brand-beige);
+  line-height: 2;
+  margin-bottom: 3.2rem;
+}
+
+footer .social-links {
+  justify-content: flex-start;
+}
+
+/*backToTopButton */
+
+#backToTopButton {
+  position: fixed;
+  bottom: 1rem;
+  right: 2.5rem;
+
+  opacity: 0;
+  visibility: hidden;
+
+  transform: translateY(100%);
+  transition: 200ms;
+}
+
+#backToTopButton.show {
+  opacity: 1;
+  visibility: visible;
+  transform: translate(0);
 }
