--- a/style.css
+++ b/style.css
@@ -545,6 +545,7 @@ footer .social-links {
   }
   nav#navigation.scroll .menu ul li a {
     color: var(--brand-light-2);
+    opacity: 0.6rem;
   }
   nav#navigation.scroll .menu a.button {
     border-color: white;
@@ -580,12 +581,13 @@ footer .social-links {
     background-color: white;
   }
 
+  nav#navigation .menu li a.active::after,
   nav#navigation .menu li a:hover::after {
     padding-inline: 0.8rem;
     width: 100%;
   }
 
-  nav#navigation.scroll .menu li a:active,
+  nav#navigation.scroll .menu li a.active,
   nav#navigation.scroll .menu li a:hover {
     opacity: 1;
   }
